--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,10 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    "
+    "    if len(restaurant[\"rating\"] > alternative[\"rating\"]:\n",
+    "        return restaurant\n",
+    "    else:\n",
+    "        return alternative"
    ]
   },
   {
