--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def open_restra"
+   ]
   },
   {
    "cell_type": "code",
