--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def open_restaurants()"
+    "def open_restaurants(list_of_restaurant)"
    ]
   },
   {
