automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def open_restaurants(list_of_restaurant)"
+    "def open_restaurants(list_of_restaurant):\n",
+    "    "
    ]
   },
   {
