--- a/index.ipynb
+++ b/index.ipynb
@@ -238,8 +238,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def open_restaurants(list_of_restaurant):\n",
-    "    for restaurant in list_o"
+    "def open_restaurants(list_of_restaurants):\n",
+    "    for restaurant in list_of_restaurants\"\n",
+    "    \""
    ]
   },
   {
