--- a/index.ipynb
+++ b/index.ipynb
@@ -239,8 +239,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(list_of_restaurants):\n",
-    "    for restaurant in list_of_restaurants\"\n",
-    "    \""
+    "    for restaurant in list_of_restaurants:\n",
+    "        if restaurant[\"\"]"
    ]
   },
   {
