--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,8 @@
    "source": [
     "def open_restaurants(list_of_restaurants):\n",
     "    for restaurant in list_of_restaurants:\n",
-    "        if restaurant[\"is_closed\"]"
+    "        if restaurant[\"is_closed\"]:\n",
+    "            "
    ]
   },
   {
