--- a/index.ipynb
+++ b/index.ipynb
@@ -239,6 +239,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(list_of_restaurants):\n",
+    "    opee\n",
     "    for restaurant in list_of_restaurants:\n",
     "        if restaurant[\"is_closed\"]:\n",
     "            "
