--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(list_of_restaurants):\n",
-    "    open_restaurant = \n",
+    "    open_restaurant = []\n",
     "    for restaurant in list_of_restaurants:\n",
     "        if restaurant[\"is_closed\"]:\n",
     "            "
