--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,8 @@
     "def open_restaurants(list_of_restaurants):\n",
     "    open_restaurant = []\n",
     "    for restaurant in list_of_restaurants:\n",
-    "        if restaurant[\"is_closed\"]:\n",
+    "        if !restaurant[\"is_closed\"]:\n",
+    "            open\n",
     "            "
    ]
   },
