automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
     "    open_restaurant = []\n",
     "    for restaurant in list_of_restaurants:\n",
     "        if !restaurant[\"is_closed\"]:\n",
-    "            open\n",
+    "            open_restaurant.append(reat)\n",
     "            "
    ]
   },
