automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,17 +234,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-86f088cb9ee9>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-86f088cb9ee9>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if !restaurant[\"is_closed\"]:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def open_restaurants(list_of_restaurants):\n",
     "    open_restaurant = []\n",
     "    for restaurant in list_of_restaurants:\n",
     "        if !restaurant[\"is_closed\"]:\n",
     "            open_restaurant.append(restaurant)\n",
-    "    return \n",
-    "            "
+    "    return open_restaurant"
    ]
   },
   {
