automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,7 @@
     "def open_restaurants(list_of_restaurants):\n",
     "    open_restaurant = []\n",
     "    for restaurant in list_of_restaurants:\n",
-    "        if !(restaurant[\"is_closed\"]):\n",
+    "        if `(restaurant[\"is_closed\"]):\n",
     "            open_restaurant.append(restaurant)\n",
     "    return open_restaurant"
    ]
