--- a/index.ipynb
+++ b/index.ipynb
@@ -297,13 +297,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open_restaurant = []\n",
-    "    for restaurant in list_of_restaurants:\n",
+    "    for restaurant in restaurants:\n",
     "        if ~(restaurant[\"is_closed\"]):\n",
     "            open_restaurant.append(restaurant)\n",
     "    return open_restaurant"
