automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
     "def open_restaurants(list_of_restaurants):\n",
     "    open_restaurant = []\n",
     "    for restaurant in list_of_restaurants:\n",
-    "        if ~(restaurant[\"is_closed\"]):\n",
+    "        if no(restaurant[\"is_closed\"]):\n",
     "            open_restaurant.append(restaurant)\n",
     "    return open_restaurant"
    ]
@@ -297,30 +297,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open_restaurant = []\n",
     "    for restaurant in restaurants:\n",
-    "        if ~(restaurant[\"is_closed\"]):\n",
+    "        if not (restaurant[\"is_closed\"]):\n",
     "            open_restaurant.append(restaurant)\n",
     "    return open_restaurant"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
