--- a/index.ipynb
+++ b/index.ipynb
@@ -234,14 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(list_of_restaurants):\n",
     "    open_restaurant = []\n",
     "    for restaurant in list_of_restaurants:\n",
-    "        if no(restaurant[\"is_closed\"]):\n",
+    "        if not (restaurant[\"is_closed\"]):\n",
     "            open_restaurant.append(restaurant)\n",
     "    return open_restaurant"
    ]
@@ -331,9 +331,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Fork & Fig'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "open_restaurants(restaurants)[0]['name'] # 'Fork & Fig'"
    ]
